data/derived/comb/progs/unify/prog7970.ml.out
Characters 118-133:
  let toSum = intermediateSum * (10 ** padCount) in
              ^^^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type int
